Fix start partup form (#932)
* fix(modal-header): fix create partup modal header
- Add close-button to header;
- Header is no longer transparent, this fixes text overlap.
Closes: #819, #874

--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -249,6 +249,7 @@
             color: $color-text-subtle
             padding-top: 15px
             height: 70px
+            z-index: 2
 
             &:hover
                 background-color: $color-background-tertiery
