--- a/app/client/stylesheets/components/pu-header.sass
+++ b/app/client/stylesheets/components/pu-header.sass
@@ -70,6 +70,13 @@ $modal-bar-height: 70px
             margin-top: 0
 
         &.pu-header-progress
+            height: ($modal-bar-height + 50px)
+            background-color:$color-background
+            .pu-button-header-modal
+                background-color: $color-background
+                height: 50px
+                &:hover, &:active, &:focus, &:visited
+                    color:$color-background-secondary
             .pu-progresspager
                 padding-top: $modal-bar-height
                 top: 0
