--- a/app/client/stylesheets/components/pu-page.sass
+++ b/app/client/stylesheets/components/pu-page.sass
@@ -133,10 +133,6 @@
         .pu-sub-pagecontent
             padding-top: 25px
 
-    &-progresspager
-        .pu-sub-pagecontent
-            padding-top: 90px
-
     &-overlay
         background-color: $color-primary
         position: relative
